fix titles behind the navbar

--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -40,13 +40,13 @@
 }
 
 @mixin until($breakpoint){
-  @media only screen and (max-width: $breakpoint) {
+  @media (max-width: $breakpoint) {
     @content;
   }
 }
 
 @mixin from($breakpoint){
-  @media only screen and (min-width: $breakpoint) {
+  @media (min-width: $breakpoint) {
     @content;
   }
 }
